# Internship-scraper-live

./: .replit  Intern.html  README.md  internship.csv  pyproject.toml  scraper.py  scratch.py
